--- a/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
+++ b/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
@@ -130,6 +130,14 @@
     </Compile>
     <Compile Include="SQLite.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="InstructorSeatingChartViewController.cs" />
+    <Compile Include="InstructorSeatingChartViewController.designer.cs">
+      <DependentUpon>InstructorSeatingChartViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SeatingChartWebView.cs" />
+    <Compile Include="SeatingChartWebView.designer.cs">
+      <DependentUpon>SeatingChartWebView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard.storyboard" />
@@ -138,6 +146,7 @@
   <ItemGroup>
     <Folder Include="Images\" />
     <Folder Include="charts\" />
+    <Folder Include="charts\SeatingCharts\" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -171,5 +180,21 @@
     <Content Include="charts\VsClassAverage.htm" />
     <Content Include="charts\highcharts-more.js" />
     <Content Include="charts\gradeDistribution.htm" />
+    <Content Include="charts\SeatingCharts\morse.html">
+      <DependentUpon>morse.html</DependentUpon>
+    </Content>
+    <Content Include="charts\SeatingCharts\seatfunctions.js" />
+    <Content Include="charts\SeatingCharts\student_stats.html" />
+    <Content Include="charts\SeatingCharts\.DS_Store" />
+    <Content Include="charts\SeatingCharts\backup_v1.html" />
+    <Content Include="charts\SeatingCharts\backupjs" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\16_980grid.css" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\ReadMe.txt" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\demo.css" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\index.html" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\reset.css" />
+    <Content Include="charts\SeatingCharts\Totoro-V1\text.css" />
+    <Content Include="charts\SeatingCharts\highcharts.js" />
+    <Content Include="charts\SeatingCharts\highcharts-more.js" />
   </ItemGroup>
 </Project>
