implemented functionality to write to XML file. Now it needs to be read from, to the javascript file for seating chart

--- a/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
+++ b/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
@@ -138,6 +138,7 @@
       <DependentUpon>SeatingChartWebView.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="XML.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard.storyboard" />
