added plot for standard deviation. Need to make parsing functions and connect between monotouch and highcharts via xml.

--- a/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
+++ b/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
@@ -202,5 +202,6 @@
     <Content Include="charts\SeatingCharts\highcharts.js" />
     <Content Include="charts\SeatingCharts\highcharts-more.js" />
     <Content Include="charts\SeatingCharts\seatingchart.xml" />
+    <Content Include="charts\standardDev.htm" />
   </ItemGroup>
 </Project>
