--- a/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
+++ b/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
@@ -148,6 +148,7 @@
       <DependentUpon>StudentTabBarController.cs</DependentUpon>
     </Compile>
     <Compile Include="JSONtestClass.cs" />
+    <Compile Include="BackendCommunication.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard.storyboard" />
@@ -207,7 +208,6 @@
     <Content Include="charts\SeatingCharts\highcharts-more.js" />
     <Content Include="charts\SeatingCharts\seatingchart.xml" />
     <Content Include="charts\standardDev.htm" />
-    <Content Include="JSONexample.txt" />
     <Content Include="charts\SeatingCharts\studio.html" />
     <Content Include="charts\SeatingCharts\studio_student.html" />
     <Content Include="charts\SeatingCharts\morse_student.html" />
