can now error check for user existence on login, but bug exists on backend. Timeout error?

--- a/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
+++ b/Learning-Track/LearningTrack/LearningTrack/LearningTrack.csproj
@@ -149,6 +149,7 @@
     </Compile>
     <Compile Include="JSONtestClass.cs" />
     <Compile Include="BackendCommunication.cs" />
+    <Compile Include="CalculatingFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard.storyboard" />
