added security layer back. Successful deserialize. Need to test matching. Updated graphics and logo

--- a/Learning-Track/LearningTrack/LearningTrack/Info.plist
+++ b/Learning-Track/LearningTrack/LearningTrack/Info.plist
@@ -6,8 +6,8 @@
 	<string>Learning Track</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Resources/launchicon.png</string>
-		<string>Resources/retinalaunchicon.png</string>
+		<string>Icon-72</string>
+		<string>Icon-72@2x</string>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
